--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon3"
         android:label="@string/game_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
